--- a/src/app.html
+++ b/src/app.html
@@ -20,5 +20,8 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+
+		<!-- Color mode import -->
+		<script src="%sveltekit.assets%/global-style/color-mode.js"></script>
 	</body>
 </html>
